Closed Bug 201054 Opened 23 years ago Closed 23 years ago

Proxy: CONNECT: (SSL Proxy) w/ NTLM auth fails

Categories

(Core :: Networking: HTTP, defect, P2)

x86
Windows 2000
defect

Tracking

()

RESOLVED FIXED
mozilla1.4beta

People

(Reporter: darin.moz, Assigned: darin.moz)

References

Details

(Keywords: topembed+, Whiteboard: [NTLM], edt_a3)

Attachments

(1 file)

the NTLM code was never tested for the SSL proxy CONNECT case. it turns out that the code path for SSL proxy CONNECT kills the HTTP connection when anything other than a 200 response is returned. NTLM authentication naturally fails since it expects the connection to remain open for the next request.
Severity: normal → major
Status: NEW → ASSIGNED
Keywords: nsbeta1, topembed
Priority: -- → P2
Target Milestone: --- → mozilla1.4beta
Whiteboard: [NTLM]
Keywords: topembedtopembed+
Whiteboard: [NTLM] → [NTLM], edt_a3
Attached patch v1 patchSplinter Review
straightforward patch: 1- need to keep track of whether or not we got a successful 200 response from our CONNECT request. if not, then we need to know to reissue the CONNECT request when reusing the connection. 2- need to not close the connection when the CONNECT fails. 3- IE sends "Proxy-Connection: keep-alive" along with CONNECT method, and so i think we should too.
Attachment #119796 - Flags: superreview?(bzbarsky)
Attachment #119796 - Flags: review?(dougt)
Attachment #119796 - Flags: superreview?(bzbarsky) → superreview+
Attachment #119796 - Flags: review?(dougt) → review+
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
*** Bug 200467 has been marked as a duplicate of this bug. ***
Summary: SSL proxy CONNECT w/ NTLM auth fails → Proxy: CONNECT: (SSL Proxy) w/ NTLM auth fails
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: