fixes bug 201054 "SSL proxy CONNECT w/ NTLM auth fails" r=dougt sr=bz